[package]
name = "sam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Remove
minicaldav = "0.8.0"
ureq = "2.7.1"
url = { version = "2" }
toml = "0.7.6"
chrono = "0.4.26"
base64 = "0.21.2"
xmltree = "0.10.3"

[dependencies.ical]
version = "0.8.0"
default-features = false
features = ["ical", "vcard", "generator"]
